--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
     "pg": "^7.17.1"
   },
   "devDependencies": {
