--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "knex": "^0.21.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.6",
-    "pg": "^7.17.1"
+    "pg": "^7.17.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3",
